LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/SolutionPL__c.object-meta.xml
<CustomObject>
    <description>This object is part of the custom functionality for managing the dependency between the 3 Picklists on the Lead object namely Solution (Single Picklist), Expertise (Multi Picklist) and Sub Expertise (Multi Picklist). It stores the List of Values (LOV) configured for the field named Solution.</description>
    <label>Solution (PL)</label>
    <nameField>
        <displayFormat>SN - {000000000}</displayFormat>
        <label>Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions (PL)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>