LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sector solution - New</fullName>
            </value>
            <value>
                <fullName>Sector solution - Now</fullName>
            </value>
            <value>
                <fullName>Sector solution - Next</fullName>
            </value>
            <value>
                <fullName>Firm solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>