LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/fields/LOV__c.field-meta.xml
<CustomField>
    <fullName>LOV__c</fullName>
    <description>This stores the List of Value added to the field named Solution (Solution__c) on the Lead object.</description>
    <label>LOV</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>