LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/fields/Solution_Leader__c.field-meta.xml
<CustomField>
    <fullName>Solution_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solutions_PL</relationshipName>
    <type>Lookup</type>
</CustomField>