LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOV__c</columns>
    <columns>Primary_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>