LinKreta_POC_Repository/force-app/main/default/objects/SolutionPL__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>LOV__c</columns>
    <columns>Category__c</columns>
    <columns>Solution_Leader__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>